style: fix overflow hidden

--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -11,5 +11,4 @@
   box-sizing: border-box;
   background-color: #fff;
   min-height: 100vh;
-  overflow: hidden;
 }
